K8S/Healthcheck.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcheck
  namespace: openedx
spec:
  selector:
    app: healthcheck
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
      nodePort: 30081
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck
  namespace: openedx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: healthcheck
  template:
    metadata:
      labels:
        app: healthcheck
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo
          args:
            - "-text=OK"
          ports:
            - containerPort: 5678
