K8S/be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rosettacloud-backend
  namespace: openedx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rosettacloud-backend
  template:
    metadata:
      labels:
        app: rosettacloud-backend
    spec:
      containers:
        - name: rosettacloud-backend
          image: 339712964409.dkr.ecr.me-central-1.amazonaws.com/rosettacloud-backend:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ecr-creds

---
apiVersion: v1
kind: Service
metadata:
  name: rosettacloud-backend-service
  namespace: openedx
spec:
  selector:
    app: rosettacloud-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
  nodePort: 30085
