K8S/labs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interactive-labs-deployment
  namespace: openedx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interactive-labs
  template:
    metadata:
      labels:
        app: interactive-labs
    spec:
      imagePullSecrets:
        - name: ecr-creds # ← your secret
      containers:
        - name: interactive-labs
          image: 339712964409.dkr.ecr.me-central-1.amazonaws.com/interactive-labs:latest
          ports:
            - containerPort: 80
          securityContext:
            privileged: true
            runAsUser: 0
---
apiVersion: v1
kind: Service
metadata:
  name: interactive-labs-service
  namespace: openedx
spec:
  selector:
    app: interactive-labs
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80 # service port
      targetPort: 80 # container port
      nodePort: 30088 # fixed NodePort (must be in 30000-32767)

# kubectl create secret -n openedx docker-registry ecr-creds \
#   --docker-server=339712964409.dkr.ecr.me-central-1.amazonaws.com \
#   --docker-username=AWS \
#   --docker-password="$(aws ecr get-login-password --region me-central-1)" \
#   --docker-email=you@example.com
