K8S/caddy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caddy-ingress
  namespace: openedx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - learn.dev.rosettacloud.app
        - studio.dev.rosettacloud.app
        - preview.learn.dev.rosettacloud.app
        - apps.learn.dev.rosettacloud.app
        - meilisearch.learn.dev.rosettacloud.app
      secretName: rosettacloud-tls
  rules:
    - host: learn.dev.rosettacloud.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
    - host: studio.dev.rosettacloud.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
    - host: preview.learn.dev.rosettacloud.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
    - host: apps.learn.dev.rosettacloud.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
    - host: meilisearch.learn.dev.rosettacloud.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
